apt (0.9.4) UNRELEASED; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/pkgcachegen.cc:
    - make IsDuplicatedDescription static so that it is really private
      as we don't need a symbol for it as it is not in a header
  * Makefile, buildlib/*.mak:
    - reshuffle dependencies so that parallel building seems to work
    - separate manpages from the rest of the doc building
  * prepare-release:
    - apt-inst version isn't apt versions, so don't override variable
  * debian/rules:
    - apt-utils packages manpages, so it should depend on build-doc
    - make apt and apt-utils packages depend on manpages instead of full doc
  * debian/control:
    - move doxygen and debiandoc-sgml to Build-Depends-Indep as docs
      are no longer build in the same target as the manpages
  * apt-pkg/acquire-methods.cc:
    - factor out into private Dequeue() to fix access to deleted pointer

  [ Raphael Geissert ]
  * apt-pkg/acquire*.cc:
    - handle redirections in the worker with the right method instead of
      in the method the redirection occured in (Closes: #668111)
  * methods/http.cc:
    - forbid redirects to change protocol
  * methods/mirror.cc:
    - generate an equal sign also for the first arch (Closes: #669142)


 -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 11 May 2012 23:26:59 +0200

apt (0.9.3) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/strutl.cc:
    - remove the message size limit from ioprintf and strprintf
  * apt-pkg/contrib/configuration.cc:
    - add a more versatile Dump() method
    - normalize a bit by replacing // and /./ with / in FindFile
    - /dev/null is a special absolute path as it has no subdirectories
  * apt-pkg/acquire-worker.cc:
    - use Dump() to generate the configuration message for sending
  * cmdline/apt-config.cc:
    - make it possible to limit dump to a subtree
    - implement --empty and --format option for dump
  * apt-pkg/cdrom.cc:
    - use Dump() to generate the configuration output